--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title> Capitalize Result</title>
+		<title> Capitalize Home</title>
         <!-- Bootstrap -->
         <link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet">
     </head>
@@ -20,7 +20,7 @@
     <div class ="row ">
         <div class = "col-md-3"></div>
         <div class = "col-md-6">
-              <form action="" method="post" accept-charset="utf-8">
+              <form action="" method="get" accept-charset="utf-8">
                   {% csrf_token %}
 
                     {{ form.as_p }}<!-- as_p = displaying as a form as a paragraph--->
