--- a/home/templates/capitalize.html
+++ b/home/templates/capitalize.html
@@ -20,17 +20,23 @@
     <div class ="row ">
         <div class = "col-md-3"></div>
         <div class = "col-md-6">
-              <form action="" method="post" accept-charset="utf-8">
-                  {% csrf_token %}
-
-                    {{ form.as_p }}<!-- as_p = displaying as a form as a paragraph--->
-                  <p>Input String to be Capitalized: </p>
-                    <p><input type="text" name="string"><p>
-                    <p><input type="submit" value="Submit Sentence"></p>
-
-
+            <form action="" method="post" accept-charset="utf-8">
+              {% csrf_token %}
+                {{ form.as_p }}<!-- as_p = displaying as a form as a paragraph--->
+<!--
+                <p>Input String to be Capitalized: </p>
+                <p><input type="text" name="string"><p>
+-->
+                <p><input type="submit" value="Submit Sentence"></p>
             </form>
-              </form>
+            
+            <form action="" method="get" accept-charset="utf-8">
+                  {% csrf_token %}
+                    <p>The Capitalized result is: 
+                        <span>{{sentence_cap}}</span>
+                    </p>
+            </form>
+
         </div>
         <div class = "col-md-3"></div>
         
